--- a/preamble.tex
+++ b/preamble.tex
@@ -230,7 +230,7 @@
 \newcommand*{\ot¬result}{\¬result}
 
 \newcommand*{\manager}{\chi_m}
-\newcommand*{\delegater}{\chi_v}
+\newcommand*{\delegator}{\chi_v}
 \newcommand*{\assigners}{\chi_\mathbf{a}}
 \newcommand*{\alwaysaccers}{\chi_\mathbf{g}}
 \newcommand*{\accumulated}{\xi}
