--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -233,7 +233,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
     \item[$\manager$] The index of the blessed service.
-    \item[$\delegater$] The index of the designate service.
+    \item[$\delegator$] The index of the designate service.
     \item[$\assigners$] The indices of the services able to assign each core's authorizer queue.
     \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance.
   \end{description}
