--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -35,7 +35,7 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(9) &\mapsto \se(\lambda) \;, \\
     &&C(10) &\mapsto \se([\maybe{(w, \se_4(t))} \mid (w, t) \orderedin \rho]) \;, \\
     &&C(11) &\mapsto \se_4(\tau) \;, \\
-    &&C(12) &\mapsto \se_4(\manager, \assigners, \delegater) \concat \se(\alwaysaccers) \;, \\
+    &&C(12) &\mapsto \se_4(\manager, \assigners, \delegator) \concat \se(\alwaysaccers) \;, \\
     &&C(13) &\mapsto \se(\se^\#_4(\pi_V), \se^\#_4(\pi_L), \pi_C, \pi_S) \;, \\
     &&C(14) &\mapsto \se([\var{(\mathbf{w}, \var{\mathbf{d}})} \mid (\mathbf{w}, \mathbf{d}) \orderedin \mathbf{i} \mid \mathbf{i} \orderedin \ready]) \;, \\
     &&C(15) &\mapsto \se([\var{\mathbf{i}} \mid \mathbf{i} \orderedin \accumulated]) \;, \\
