--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -459,7 +459,7 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
     \end{cases} \\
     \using o &= \registers_8 \\
     \using \mathbf{m} &= \begin{cases}
-      \mathcal{E}(\mathbf{t}_c, \mathbf{t}_b, \mathbf{t}_t, \mathbf{t}_g, \mathbf{t}_m, \mathbf{t}_o, \mathbf{t}_i) &\when \mathbf{t} \ne \none \\
+      \mathcal{E}(\mathbf{t}_c, \mathbf{t}_b, \mathbf{t}_t, \mathbf{t}_g, \mathbf{t}_m, \mathbf{t}_o, \mathbf{t}_i, \mathbf{t}_f) &\when \mathbf{t} \ne \none \\
       \none &\otherwise
     \end{cases} \\
     \forall i \in \N_{|\mathbf{m}|} : \memory'_{o + i} &\equiv \begin{cases}
