--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -28,11 +28,11 @@ A work-report, of the set $\mathbb{W}$, is defined as a tuple of the work-packag
     &\isa{\wr¬avspec}{\avspec},\ 
     \isa{\wr¬context}{\mathbb{X}},\ 
     \isa{\wr¬core}{\N_\mathsf{C}},\ 
-    \isa{\wr¬authorizer}{\H},\\
-    &\isa{\wr¬authtrace}{\Y},\ 
-    \isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
+    \isa{\wr¬authorizer}{\H},\ 
+    \isa{\wr¬authtrace}{\Y},\\
+    &\isa{\wr¬srlookup}{\dict{\H}{\H}},\ 
     \isa{\wr¬digests}{\seq{\mathbb{L}}_{1:\mathsf{I}}},\ 
-    \isa{\wr¬authgasused}{\N_G},\ 
+    \isa{\wr¬authgasused}{\N_G}
   \end{aligned}
 }
 \end{equation}
