PVM Invocations: Rearrange the inner PVM page admin

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -117,11 +117,10 @@
     \item[$\Omega_S$] Solicit-preimage host-call.
     \item[$\Omega_T$] Transfer host-call.
     \item[$\Omega_U$] Upgrade-service host-call.
-    \item[$\Omega_V$] Void inner-\textsc{pvm} memory host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
     \item[$\Omega_Y$] Fetch data host-call.
-    \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
+    \item[$\Omega_Z$] Pages inner-\textsc{pvm} memory host-call.
     \item[$\Omega_\Taurus$] Yield accumulation trie result host-call.
     \item[$\Omega_\Aries$] Provide preimage host-call.
   \end{description}
